    (was unusable before, using integer grid size).
    A lot of footprints uses not metric grid.
    refinements for user grid (mainly in read/write config).


2009-Feb-06 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew
    added "cutout" from a ZONE_CONTAINER capability to the SPECCTRA export.


2009-Feb-6 Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
    Added  a forgotten contributor (Tim Hanson) to kicad contributor list.

++pcbnew:
    Zoom factors in 1.5 progression, and limited to 18 values
    (near to to Wayne Stambaugh's changes: 15 values are not enought for pcbnew)
    removed minor problems in zoom box selection (removed blank line).
    Added user grid selection in modedit and refinements when user grid is selected.


++eeschema:
    Zoom factors in 1.5 progression, and limited to 15 values according to Wayne Stambaugh's changes.

2009-Feb-05 UPDATE Wayne Stambaugh <stambaughw@verizon.net>
================================================================================
++All
  * Change CMakeList.txt so that all PCB object classes that do not need built
    separately for pcbnew, gerbview, and cvpcb only get built once and added
    to the common library.
  * Override all classes derived from WinEDA_BasePcbFrame so that the source
    code file basepcbframe.cpp only gets compiled once and added to the common
    library.
  * Prevent cursor movement keys from moving outside of client area by
    automatically scrolling the drawing.


>>>>>>> .r1562
2009-Feb-4 UPDATE Vesa Solonen <vesa.solonen@hut.fi>
================================================================================
++pcbnew:
++eeschema:
    Zoom factors in 3th root series of 2. So two intermediates between half/double scale.

2009-Feb-04 UPDATE Wayne Stambaugh <stambaughw@verizon.net>